--- a/COMP09044_CW_PasswordManager/build-COMP09044_CW_PasswordManager-Desktop-Debug/Makefile
+++ b/COMP09044_CW_PasswordManager/build-COMP09044_CW_PasswordManager-Desktop-Debug/Makefile
@@ -61,8 +61,10 @@ SOURCES       = ../COMP09044_CW_PasswordManager/account.cpp \
 		../COMP09044_CW_PasswordManager/mainwindow.cpp \
 		../COMP09044_CW_PasswordManager/newaccount.cpp \
 		../COMP09044_CW_PasswordManager/password.cpp \
+		../COMP09044_CW_PasswordManager/sort.cpp \
 		../COMP09044_CW_PasswordManager/unittest.cpp moc_mainwindow.cpp \
-		moc_newaccount.cpp
+		moc_newaccount.cpp \
+		moc_sort.cpp
 OBJECTS       = account.o \
 		accountdirectory.o \
 		breachchecker.o \
@@ -72,9 +74,11 @@ OBJECTS       = account.o \
 		mainwindow.o \
 		newaccount.o \
 		password.o \
+		sort.o \
 		unittest.o \
 		moc_mainwindow.o \
-		moc_newaccount.o
+		moc_newaccount.o \
+		moc_sort.o
 DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/unix.conf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/linux.conf \
@@ -164,6 +168,7 @@ DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		../COMP09044_CW_PasswordManager/mainwindow.h \
 		../COMP09044_CW_PasswordManager/newaccount.h \
 		../COMP09044_CW_PasswordManager/password.h \
+		../COMP09044_CW_PasswordManager/sort.h \
 		../COMP09044_CW_PasswordManager/unittest.h ../COMP09044_CW_PasswordManager/account.cpp \
 		../COMP09044_CW_PasswordManager/accountdirectory.cpp \
 		../COMP09044_CW_PasswordManager/breachchecker.cpp \
@@ -173,6 +178,7 @@ DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		../COMP09044_CW_PasswordManager/mainwindow.cpp \
 		../COMP09044_CW_PasswordManager/newaccount.cpp \
 		../COMP09044_CW_PasswordManager/password.cpp \
+		../COMP09044_CW_PasswordManager/sort.cpp \
 		../COMP09044_CW_PasswordManager/unittest.cpp
 QMAKE_TARGET  = COMP09044_CW_PasswordManager
 DESTDIR       = 
@@ -182,7 +188,7 @@ TARGET        = COMP09044_CW_PasswordManager
 first: all
 ####### Build rules
 
-COMP09044_CW_PasswordManager: ui_mainwindow.h ui_newaccount.h $(OBJECTS)  
+COMP09044_CW_PasswordManager: ui_mainwindow.h ui_newaccount.h ui_sort.h $(OBJECTS)  
 	$(LINK) $(LFLAGS) -o $(TARGET) $(OBJECTS) $(OBJCOMP) $(LIBS)
 
 Makefile: ../COMP09044_CW_PasswordManager/COMP09044_CW_PasswordManager.pro /usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++/qmake.conf /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
@@ -363,9 +369,9 @@ distdir: FORCE
 	@test -d $(DISTDIR) || mkdir -p $(DISTDIR)
 	$(COPY_FILE) --parents $(DIST) $(DISTDIR)/
 	$(COPY_FILE) --parents /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp $(DISTDIR)/
-	$(COPY_FILE) --parents ../COMP09044_CW_PasswordManager/account.h ../COMP09044_CW_PasswordManager/accountdirectory.h ../COMP09044_CW_PasswordManager/breachchecker.h ../COMP09044_CW_PasswordManager/datahandler.h ../COMP09044_CW_PasswordManager/hashtable.h ../COMP09044_CW_PasswordManager/inputvalexcept.h ../COMP09044_CW_PasswordManager/mainwindow.h ../COMP09044_CW_PasswordManager/newaccount.h ../COMP09044_CW_PasswordManager/password.h ../COMP09044_CW_PasswordManager/unittest.h $(DISTDIR)/
-	$(COPY_FILE) --parents ../COMP09044_CW_PasswordManager/account.cpp ../COMP09044_CW_PasswordManager/accountdirectory.cpp ../COMP09044_CW_PasswordManager/breachchecker.cpp ../COMP09044_CW_PasswordManager/datahandler.cpp ../COMP09044_CW_PasswordManager/inputvalexcept.cpp ../COMP09044_CW_PasswordManager/main.cpp ../COMP09044_CW_PasswordManager/mainwindow.cpp ../COMP09044_CW_PasswordManager/newaccount.cpp ../COMP09044_CW_PasswordManager/password.cpp ../COMP09044_CW_PasswordManager/unittest.cpp $(DISTDIR)/
-	$(COPY_FILE) --parents ../COMP09044_CW_PasswordManager/mainwindow.ui ../COMP09044_CW_PasswordManager/newaccount.ui $(DISTDIR)/
+	$(COPY_FILE) --parents ../COMP09044_CW_PasswordManager/account.h ../COMP09044_CW_PasswordManager/accountdirectory.h ../COMP09044_CW_PasswordManager/breachchecker.h ../COMP09044_CW_PasswordManager/datahandler.h ../COMP09044_CW_PasswordManager/hashtable.h ../COMP09044_CW_PasswordManager/inputvalexcept.h ../COMP09044_CW_PasswordManager/mainwindow.h ../COMP09044_CW_PasswordManager/newaccount.h ../COMP09044_CW_PasswordManager/password.h ../COMP09044_CW_PasswordManager/sort.h ../COMP09044_CW_PasswordManager/unittest.h $(DISTDIR)/
+	$(COPY_FILE) --parents ../COMP09044_CW_PasswordManager/account.cpp ../COMP09044_CW_PasswordManager/accountdirectory.cpp ../COMP09044_CW_PasswordManager/breachchecker.cpp ../COMP09044_CW_PasswordManager/datahandler.cpp ../COMP09044_CW_PasswordManager/inputvalexcept.cpp ../COMP09044_CW_PasswordManager/main.cpp ../COMP09044_CW_PasswordManager/mainwindow.cpp ../COMP09044_CW_PasswordManager/newaccount.cpp ../COMP09044_CW_PasswordManager/password.cpp ../COMP09044_CW_PasswordManager/sort.cpp ../COMP09044_CW_PasswordManager/unittest.cpp $(DISTDIR)/
+	$(COPY_FILE) --parents ../COMP09044_CW_PasswordManager/mainwindow.ui ../COMP09044_CW_PasswordManager/newaccount.ui ../COMP09044_CW_PasswordManager/sort.ui $(DISTDIR)/
 
 
 clean: compiler_clean 
@@ -397,9 +403,9 @@ compiler_moc_predefs_clean:
 moc_predefs.h: /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp
 	g++ -pipe -g -std=gnu++11 -Wall -Wextra -dM -E -o moc_predefs.h /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp
 
-compiler_moc_header_make_all: moc_mainwindow.cpp moc_newaccount.cpp
+compiler_moc_header_make_all: moc_mainwindow.cpp moc_newaccount.cpp moc_sort.cpp
 compiler_moc_header_clean:
-	-$(DEL_FILE) moc_mainwindow.cpp moc_newaccount.cpp
+	-$(DEL_FILE) moc_mainwindow.cpp moc_newaccount.cpp moc_sort.cpp
 moc_mainwindow.cpp: ../COMP09044_CW_PasswordManager/mainwindow.h \
 		../COMP09044_CW_PasswordManager/accountdirectory.h \
 		../COMP09044_CW_PasswordManager/account.h \
@@ -408,6 +414,7 @@ moc_mainwindow.cpp: ../COMP09044_CW_PasswordManager/mainwindow.h \
 		../COMP09044_CW_PasswordManager/hashtable.h \
 		../COMP09044_CW_PasswordManager/newaccount.h \
 		../COMP09044_CW_PasswordManager/password.h \
+		../COMP09044_CW_PasswordManager/breachchecker.h \
 		moc_predefs.h \
 		/usr/lib/qt5/bin/moc
 	/usr/lib/qt5/bin/moc $(DEFINES) --include '/mnt/15f210d7-aa4f-4ea8-a4b3-2bd52aeba8fc/Programming/Uni/Algorithms & Collections/PROJECT/COMP09044_CW_PasswordManager/build-COMP09044_CW_PasswordManager-Desktop-Debug/moc_predefs.h' -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I'/mnt/15f210d7-aa4f-4ea8-a4b3-2bd52aeba8fc/Programming/Uni/Algorithms & Collections/PROJECT/COMP09044_CW_PasswordManager/COMP09044_CW_PasswordManager' -I/usr/include/x86_64-linux-gnu/qt5/Qca-qt5/QtCrypto -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtSql -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I. -I/usr/include/c++/10 -I/usr/include/x86_64-linux-gnu/c++/10 -I/usr/include/c++/10/backward -I/usr/lib/gcc/x86_64-linux-gnu/10/include -I/usr/local/include -I/usr/include/x86_64-linux-gnu -I/usr/include ../COMP09044_CW_PasswordManager/mainwindow.h -o moc_mainwindow.cpp
@@ -423,13 +430,18 @@ moc_newaccount.cpp: ../COMP09044_CW_PasswordManager/newaccount.h \
 		/usr/lib/qt5/bin/moc
 	/usr/lib/qt5/bin/moc $(DEFINES) --include '/mnt/15f210d7-aa4f-4ea8-a4b3-2bd52aeba8fc/Programming/Uni/Algorithms & Collections/PROJECT/COMP09044_CW_PasswordManager/build-COMP09044_CW_PasswordManager-Desktop-Debug/moc_predefs.h' -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I'/mnt/15f210d7-aa4f-4ea8-a4b3-2bd52aeba8fc/Programming/Uni/Algorithms & Collections/PROJECT/COMP09044_CW_PasswordManager/COMP09044_CW_PasswordManager' -I/usr/include/x86_64-linux-gnu/qt5/Qca-qt5/QtCrypto -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtSql -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I. -I/usr/include/c++/10 -I/usr/include/x86_64-linux-gnu/c++/10 -I/usr/include/c++/10/backward -I/usr/lib/gcc/x86_64-linux-gnu/10/include -I/usr/local/include -I/usr/include/x86_64-linux-gnu -I/usr/include ../COMP09044_CW_PasswordManager/newaccount.h -o moc_newaccount.cpp
 
+moc_sort.cpp: ../COMP09044_CW_PasswordManager/sort.h \
+		moc_predefs.h \
+		/usr/lib/qt5/bin/moc
+	/usr/lib/qt5/bin/moc $(DEFINES) --include '/mnt/15f210d7-aa4f-4ea8-a4b3-2bd52aeba8fc/Programming/Uni/Algorithms & Collections/PROJECT/COMP09044_CW_PasswordManager/build-COMP09044_CW_PasswordManager-Desktop-Debug/moc_predefs.h' -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I'/mnt/15f210d7-aa4f-4ea8-a4b3-2bd52aeba8fc/Programming/Uni/Algorithms & Collections/PROJECT/COMP09044_CW_PasswordManager/COMP09044_CW_PasswordManager' -I/usr/include/x86_64-linux-gnu/qt5/Qca-qt5/QtCrypto -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtSql -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I. -I/usr/include/c++/10 -I/usr/include/x86_64-linux-gnu/c++/10 -I/usr/include/c++/10/backward -I/usr/lib/gcc/x86_64-linux-gnu/10/include -I/usr/local/include -I/usr/include/x86_64-linux-gnu -I/usr/include ../COMP09044_CW_PasswordManager/sort.h -o moc_sort.cpp
+
 compiler_moc_objc_header_make_all:
 compiler_moc_objc_header_clean:
 compiler_moc_source_make_all:
 compiler_moc_source_clean:
-compiler_uic_make_all: ui_mainwindow.h ui_newaccount.h
+compiler_uic_make_all: ui_mainwindow.h ui_newaccount.h ui_sort.h
 compiler_uic_clean:
-	-$(DEL_FILE) ui_mainwindow.h ui_newaccount.h
+	-$(DEL_FILE) ui_mainwindow.h ui_newaccount.h ui_sort.h
 ui_mainwindow.h: ../COMP09044_CW_PasswordManager/mainwindow.ui \
 		/usr/lib/qt5/bin/uic
 	/usr/lib/qt5/bin/uic ../COMP09044_CW_PasswordManager/mainwindow.ui -o ui_mainwindow.h
@@ -437,6 +449,10 @@ ui_mainwindow.h: ../COMP09044_CW_PasswordManager/mainwindow.ui \
 ui_newaccount.h: ../COMP09044_CW_PasswordManager/newaccount.ui \
 		/usr/lib/qt5/bin/uic
 	/usr/lib/qt5/bin/uic ../COMP09044_CW_PasswordManager/newaccount.ui -o ui_newaccount.h
+
+ui_sort.h: ../COMP09044_CW_PasswordManager/sort.ui \
+		/usr/lib/qt5/bin/uic
+	/usr/lib/qt5/bin/uic ../COMP09044_CW_PasswordManager/sort.ui -o ui_sort.h
 
 compiler_yacc_decl_make_all:
 compiler_yacc_decl_clean:
@@ -481,6 +497,7 @@ main.o: ../COMP09044_CW_PasswordManager/main.cpp ../COMP09044_CW_PasswordManager
 		../COMP09044_CW_PasswordManager/hashtable.h \
 		../COMP09044_CW_PasswordManager/newaccount.h \
 		../COMP09044_CW_PasswordManager/password.h \
+		../COMP09044_CW_PasswordManager/breachchecker.h \
 		../COMP09044_CW_PasswordManager/unittest.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o main.o ../COMP09044_CW_PasswordManager/main.cpp
 
@@ -492,6 +509,7 @@ mainwindow.o: ../COMP09044_CW_PasswordManager/mainwindow.cpp ../COMP09044_CW_Pas
 		../COMP09044_CW_PasswordManager/hashtable.h \
 		../COMP09044_CW_PasswordManager/newaccount.h \
 		../COMP09044_CW_PasswordManager/password.h \
+		../COMP09044_CW_PasswordManager/breachchecker.h \
 		ui_mainwindow.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o mainwindow.o ../COMP09044_CW_PasswordManager/mainwindow.cpp
 
@@ -509,6 +527,10 @@ password.o: ../COMP09044_CW_PasswordManager/password.cpp ../COMP09044_CW_Passwor
 		../COMP09044_CW_PasswordManager/inputvalexcept.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o password.o ../COMP09044_CW_PasswordManager/password.cpp
 
+sort.o: ../COMP09044_CW_PasswordManager/sort.cpp ../COMP09044_CW_PasswordManager/sort.h \
+		ui_sort.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o sort.o ../COMP09044_CW_PasswordManager/sort.cpp
+
 unittest.o: ../COMP09044_CW_PasswordManager/unittest.cpp ../COMP09044_CW_PasswordManager/unittest.h \
 		../COMP09044_CW_PasswordManager/password.h \
 		../COMP09044_CW_PasswordManager/inputvalexcept.h \
@@ -523,6 +545,9 @@ moc_mainwindow.o: moc_mainwindow.cpp
 
 moc_newaccount.o: moc_newaccount.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_newaccount.o moc_newaccount.cpp
+
+moc_sort.o: moc_sort.cpp 
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_sort.o moc_sort.cpp
 
 ####### Install
 
